<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/new_item"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/menuAddItem"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/delete_items"
        android:icon="@drawable/ic_baseline_remove_24"
        android:title="@string/menuDeleteItem"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/download_items"
        android:icon="@drawable/ic_baseline_save_alt_24"
        android:title="@string/menuDownloadFromFile"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/upload_items"
        android:icon="@drawable/ic_baseline_cloud_upload_24"
        android:title="@string/menuSaveToFile"
        app:showAsAction="ifRoom|withText"/>
</menu>